--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,12 @@
 [theme]
 base="light"
 primaryColor="#346daf"
+
+[server]
+headless = true
+
+
+[layout]
+# Opciones: "centered" o "wide"
+# Cambia a "wide" para ocupar todo el ancho
+wideMode = true
